<resources>
    <string name="app_name">Space Trader</string>
    <string name="close_app">Close App</string>
    <string name="good_name">Good</string>
    <string name="good_quantity">Quantity</string>
    <string name="good_price">Price</string>
    <string name="buy_btn_name">Buy</string>
    <string name="sell_btn_text">Sell</string>
    <string name="market_btn_text">Market</string>
    <string name="travel_btn_text">Travel</string>
    <string name="save_app">Save</string>
    <string name="new_game">New Game</string>
    <string name="load_game">Load Game</string>
    <string name="enter_your_username_to_load_a_previous_game">
        enter your username to load a previous game</string>
    <string name="continue_main_btn">Continue</string>
    <string name="encounter_location_label">At 20 clicks from %1$s, you encounter %2$s.</string>
    <string name="encounter_location_default_text">Location of Encounter</string>
    <string name="script_of_encounter_default_text">Script of Encounter</string>
    <string name="script_of_police_encounter">
        The local police have taken all of your assets for speeding in a nearby galaxy.</string>
    <string name="script_of_pirates_encounter">
        Money-hungry pirates have stolen all of your goods!</string>
    <string name="script_of_traders_encounter">
        You have encountered a trader who would like to trade goods.</string>
    <string name="script_of_default_encounter">
        You have been encountered! Click continue to see what happens next…</string>
    <string name="credits_default">Credits: ***default***</string>
    <string name="default_number">#</string>
    <string name="market_items_header">Market Items</string>
    <string name="cargo_items_header">Cargo Items</string>
    <string name="ship_information_header">Ship Information</string>
    <string name="cargo_label">Cargo</string>
    <string name="resources_label">Resources</string>
    <string name="username_label">Username</string>
    <string name="name_label">Name</string>
    <string name="available_skill_points_label">Available Skill Points: %1$d</string>
    <string name="pilot_points_label">Pilot Points:</string>
    <string name="fighter_points_label">Fighter Points:</string>
    <string name="trader_points_label">Trader Points:</string>
    <string name="engineer_points_label">Engineer Points:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="difficulty_label">Difficulty</string>
    <string name="create_user_label">Create User</string>
    <string name="quantity_label">Quantity:</string>
    <string name="fuel_tank_label">Fuel Tank</string>
    <string name="ship_health_label">Ship Health</string>
    <string name="ship_type_label">Ship Type</string>
    <string name="name_of_good_default">name of good</string>
    <string name="number_of_good_default">number of good</string>
    <string name="price_of_good_default">price of good</string>
    <string name="go_btn_label">GO</string>
    <string name="choose_a_planet_label">Choose A Planet</string>
    <string name="choose_a_solar_system_label">Choose A Solar System</string>
    <string name="current_fuel_label">Current Fuel:</string>
    <string name="current_location_label">Current Location: %1$s, %2$s</string>
    <string name="pilot_points">%1$d</string>
    <string name="fighter_points">%1$d</string>
    <string name="trader_points">%1$d</string>
    <string name="engineer_points">%1$d</string>
    <string name="credits">Credits: %1$d</string>
    <string name="fuel">Current fuel: %1$d</string>
    <string name="quantity">%1$d</string>
    <string name="price">%1$d</string>
</resources>
