<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.TitleScreenActivity"
    android:background ="@drawable/title">


    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="400dp"
        android:text="@string/enter_your_username_to_load_a_previous_game"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="440dp"
        android:singleLine="true"
        android:inputType=""
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:hint="@string/username_label"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="550dp"
        android:onClick="newGamePressed"
        android:text="@string/new_game" />

    <Button
        android:id="@+id/load_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="490dp"
        android:onClick="loadGamePressed"
        android:text="@string/load_game" />



</RelativeLayout>