<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/market_activity_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.MarketActivity">

    <TextView
        android:id="@+id/start_of_market_items_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_items_header"/>

    <ListView
        android:id="@+id/lvGoods"
        android:layout_below="@id/start_of_market_items_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>

    <TextView
        android:id="@+id/start_of_cargo_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lvGoods"
        android:text="@string/cargo_items_header"/>

    <ListView
        android:id="@+id/lvCargoItems"
        android:layout_below="@id/start_of_cargo_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>


    <RelativeLayout
        android:id="@+id/rvButtonHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="26dp"
            android:layout_marginEnd="42dp"
            android:onClick="buyButtonPressed"
            android:text="@string/buy_btn_name" />

        <Button
            android:id="@+id/btnSell"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btnBuy"
            android:layout_marginBottom="26dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_toEndOf="@+id/quantityInput"
            android:layout_toStartOf="@+id/btnBuy"
            android:onClick="sellButtonPressed"
            android:text="@string/sell_btn_text" />


        <TextView
            android:id="@+id/quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnBuy"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/tvCredit"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="50dp"
            android:text="@string/quantity_label"
            tools:ignore="UnknownId" />

        <EditText
            android:id="@+id/quantityInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/btnBuy"
            android:layout_marginStart="118dp"
            android:layout_toEndOf="@+id/quantity_label"
            android:hint="@string/default_number"
            android:inputType="number"
            android:padding="10dp" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/flCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rvButtonHolder">
        <TextView
            android:id="@+id/tvCredits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits_default"
            android:textAlignment="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"/>
    </FrameLayout>


</RelativeLayout>