<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/market_item"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id = "@+id/tvGoodName"
        android:layout_width = "0dp"
        android:layout_height = "match_parent"
        android:layout_weight = "1"
        android:background = "@color/colorAccent"
        android:ellipsize = "end"
        android:padding = "5dp"
        android:text = "@string/name_of_good_default"
        android:singleLine = "true" />

    <TextView
        android:id = "@+id/tvGoodQuantity"
        android:layout_width = "0dp"
        android:layout_height = "match_parent"
        android:layout_weight = "2"
        android:background = "@color/colorAccent"
        android:ellipsize = "end"
        android:padding = "5dp"
        android:text = "@string/number_of_good_default"
        android:singleLine = "true" />

    <TextView
        android:id = "@+id/tvGoodPrice"
        android:layout_width = "0dp"
        android:layout_height = "match_parent"
        android:layout_weight = "1.5"
        android:background = "@color/colorAccent"
        android:ellipsize = "end"
        android:padding = "5dp"
        android:text = "@string/price_of_good_default"
        android:singleLine = "true" />
</LinearLayout>