<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.GameMainScreenActivity"
    android:background ="@drawable/main">

    <TextView
        android:id="@+id/ship_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/ship_information_header"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/cargo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="210dp"
        android:text="@string/cargo_label"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/ship_id"
        app:layout_constraintTop_toTopOf="@id/ship_id" />

    <TextView
        android:id="@+id/resource_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ship_id"
        android:layout_below="@+id/cargo_id"
        android:text="@string/resources_label"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/cargo_id" />

    <ProgressBar
        android:id="@+id/fuelTankBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ship_id"
        android:layout_alignStart="@+id/travelBtn"
        android:layout_marginStart="83dp"
        android:layout_marginTop="5dp"
        android:indeterminate="false"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:progress="1"
        android:progressBackgroundTint="@color/colorAccent"
        android:progressTint="@color/colorAccent" />


    <ProgressBar
        android:id="@+id/shipHealthBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tank"
        android:layout_alignStart="@+id/fuelTankBar"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="0dp"
        android:indeterminate="false"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:progress="1"
        android:progressBackgroundTint="@color/colorAccent"
        android:progressTint="@color/colorAccent" />

    <TextView
        android:id="@+id/tank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/fuel_tank_label"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="85dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:text="@string/ship_health_label"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/shipTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart = "15dp"
        android:layout_marginTop="160dp"
        android:ems="10"
        android:text="@string/ship_type_label"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/shipType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginStart="211dp"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/marketBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttons_baseline"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="100dp"
        android:onClick="onMarketPressed"
        android:text="@string/market_btn_text" />


    <Button
        android:id="@+id/travelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttons_baseline"
        android:layout_marginEnd="45dp"
        android:layout_toStartOf="@+id/marketBtn"
        android:onClick="onTravelPressed"
        android:text="@string/travel_btn_text"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/buttons_baseline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="23dp" />

</RelativeLayout>
