<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.TravelActivity"
    android:background ="@drawable/planets">

    <TextView
        android:id="@+id/currentLocationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:text="@string/current_location_label"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/currentFuelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="75dp"
        android:text="@string/current_fuel_label"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="45dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/solarSystemSpinner"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="130dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000" />
    <TextView
        android:id="@+id/solarSystem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="110dp"
        android:text="@string/choose_a_solar_system_label"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />



    <Spinner
        android:id="@+id/planetSpinner"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/planet"/>

    <TextView
        android:id="@+id/planet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        android:text="@string/choose_a_planet_label"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />


    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="165dp"
        android:layout_marginBottom="22dp"
        android:onClick="goButtonClicked"
        android:text="@string/go_btn_label" />
</RelativeLayout>

