<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.EncounterActivity"
    android:background = "@drawable/encounters_background">

    <TextView
        android:id="@+id/tvEncounterLocation"
        android:layout_width="234dp"
        android:layout_height="92dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="195dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorAccent"
        android:text="@string/encounter_location_default_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvEncounterScript"
        android:layout_width="234dp"
        android:layout_height="97dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="291dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:text="@string/script_of_encounter_default_text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="207dp"
        android:onClick="continuePressed"
        android:text="@string/continue_main_btn" />


</RelativeLayout>